// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pressable /> renders correctly with isRTL is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  preset="primary"
  style={
    [
      [
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#C5281C",
        },
      ],
      undefined,
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        [
          {
            "flexGrow": 0,
            "flexShrink": 1,
            "marginStart": 4,
            "textAlign": "center",
            "zIndex": 2,
          },
          {
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "600",
            "letterSpacing": 0.15,
            "lineHeight": 20,
          },
          {
            "color": "#FFFFFF",
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  />
</View>
`;

exports[`<Pressable /> renders correctly with text which is looked up via i18n 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="primary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#C5281C",
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#FFFFFF",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="secondary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#A1ABBB",
            "borderWidth": 1,
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#B80000",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="secondary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#A1ABBB",
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#B80000",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="primary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#C5281C",
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#FFFFFF",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="secondary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#A1ABBB",
            "borderWidth": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#B80000",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="tertiary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "paddingHorizontal": 8,
            "paddingVertical": 8,
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#B80000",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    preset="tertiary"
    style={
      [
        [
          {
            "paddingHorizontal": 16,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 0)",
          },
        ],
        undefined,
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexGrow": 0,
              "flexShrink": 1,
              "marginStart": 4,
              "textAlign": "center",
              "zIndex": 2,
            },
            {
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "600",
              "letterSpacing": 0.15,
              "lineHeight": 20,
            },
            {
              "color": "#B80000",
            },
          ],
          undefined,
          false,
          false,
        ]
      }
    />
  </View>,
]
`;
